Add normalize to local

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <title>WSU Authentication | Washington State University</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css?ver=0.15.2.1" media='all' />
+    <link rel="stylesheet" href="normalize.min.css" media='all' />
     <link rel="stylesheet" href="wsu-design-system.css" media='all' />
     <link rel="stylesheet" href="wsu-custom.css" media='all' />
     <script src="wsu-design-system.init.js"></script>
